	PR c/64709 	* c-typeck.c (pop_init_level): If constructor_elements has 	exactly one element with integer_zerop value, set constructor_zeroinit 	to 1.  Remove braces around warning_init call.

* gcc.dg/pr64709.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@220263 138bc75d-0d04-0410-961f-82ee72b054a4